--- a/src/app/pages/statassetpool/components/analyse/wy.html
+++ b/src/app/pages/statassetpool/components/analyse/wy.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="jumbotron base-info" style="padding: 1rem 0.5rem;background-color: #fff;">
-            <h1 class="display-6 content-item-title">CYD加权新增违约率</h1>
+            <h1 class="display-6 content-item-title">加权新增违约率</h1>
             <hr class="my-2">
             <div class="container-fluid content-item-content" style="padding-left: 0px;">
                 <div class="row justify-content-md-left" style="flex-wrap: nowrap;">
