修改静态池分析模块bug

--- a/src/app/pages/statassetpool/components/analyse/wy.html
+++ b/src/app/pages/statassetpool/components/analyse/wy.html
@@ -29,13 +29,13 @@
                     </div>
                     <div class="col-md-auto" style="display:flex;align-items:center;min-width:160px;">
                         <div style="display: flex;width: 150px;flex-direction: column">
-                            <span style="color: red;text-align: center;">12.67%</span>
+                            <span style="color: red;text-align: center;">{{staticPoolInfo.averageD | percent:'0.2-2'}}</span>
                             <span style="text-align: center;position: relative;">
                                 <i class="fa fa-bar-chart" style="font-size: 40px;font-weight: 200px;"></i>
                                 <label style="position:  absolute;bottom: -30px;left: 35px;font-size: 1rem;">违约率均值</label>
                             </span>
                             <div style="height: 80px;"></div>
-                            <span style="color: red;text-align: center">8.67%</span>
+                            <span style="color: red;text-align: center">{{staticPoolInfo.varianceD | percent:'0.2-2'}}</span>
                             <span style="text-align: center;position: relative;">
                                 <i class="fa fa-line-chart" style="font-size: 40px;font-weight: 200px;"></i>
                                 <label style="position:  absolute;bottom: -30px;left: 35px;font-size: 1rem;">违约率方差</label>
