--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -6,7 +6,7 @@
         <nav class="nav dropdown">
             <a class="nav-link active" routerLink="/index/projects/projects">首页</a>
             <a class="nav-link" href="/cyno/console/index.html#page/ASSTS03" target="_blank">资产池管理</a>
-            <a class="nav-link" routerLink="/index/statassetpool/main">静/动池分析</a>
+            <a class="nav-link" routerLink="/index/statassetpool/main">静态池分析</a>
             <a class="nav-link" href="/cyno/console/index.html#page/SYSTS01T04" target="_blank">系统管理</a>
         </nav>
 
