--- a/src/app/pages/statassetpool/components/detail/detail.html
+++ b/src/app/pages/statassetpool/components/detail/detail.html
@@ -4,7 +4,7 @@
             <h5 class="card-title project-title" style="flex: 0 0 auto;font-weight: 700;margin-right: 20px;">样本明细：{{staticPool.poolName}}</h5>
             <div style="flex: 1;"></div>
             <button mat-raised-button style="flex: 0 0 120px;"  [routerLink]="'/index/statassetpool/analyse/' + poolId">
-                样本分析
+                返回样本分析
             </button>
     </div>
     <div class="card-body">
