--- a/src/app/pages/statassetpool/components/import/import.html
+++ b/src/app/pages/statassetpool/components/import/import.html
@@ -1,6 +1,10 @@
 <div class="card cyno-body statassetpool-main function-body">
     <div class="card-header" style="display: flex;">
         <h5 class="card-title project-title" style="flex: 1;font-weight: 700;">导入静态池样本</h5>
+        <div style="flex: 1;"></div>
+        <button mat-raised-button style="flex: 0 0 120px;"  [routerLink]="'/index/statassetpool/main'">
+            返回静态池列表
+        </button>
     </div>
 
     <div class="card-body" style="padding-top: 70px;">
@@ -11,7 +15,7 @@
                     <mat-icon fontSet="fa" fontIcon="fa-upload"></mat-icon>
                     选择附件
                 </button>
-                (<a class="btn btn-link btn-sm" href="javascript:void(0);">下载动态池样本导入模板</a>)
+                (<a class="btn btn-link btn-sm" href="/cyno/cynoweb/staticpool/downloadStaticPool.do" target="templateDowload">下载静态池样本导入模板</a>)
               </div>
               
             </div>
@@ -34,5 +38,5 @@
         </div>
             
     </div>
-
+     <iframe src="#" style="display: none;" name="templateDowload"></iframe>
 </div>
