--- a/src/app/pages/statassetpool/components/analyse/wy.html
+++ b/src/app/pages/statassetpool/components/analyse/wy.html
@@ -87,7 +87,7 @@
                                 <cdk-cell *matCellDef="let element">第{{element.term}}期</cdk-cell>
                             </ng-container>
                             <ng-container cdkColumnDef="rate">
-                                <cdk-header-cell *cdkHeaderCellDef>加权累计违约率</cdk-header-cell>
+                                <cdk-header-cell *cdkHeaderCellDef>加权新增违约率</cdk-header-cell>
                                 <cdk-cell *matCellDef="let element">{{element.rate | percent:'0.2-2'}}</cdk-cell>
                             </ng-container>
                             <cdk-header-row *cdkHeaderRowDef="['term', 'rate']"></cdk-header-row>
@@ -104,7 +104,7 @@
             <div class="container-fluid content-item-content" style="padding-left: 0px;">
                 <div class="row justify-content-md-left" style="flex-wrap: nowrap;">
                     <div class="col-md-auto" style="min-width: 630px;border: 1px solid #b9a7a7;margin-left: 9px;">
-                        <div echarts [options]="chartOption2" style="height: 300px;width: 600px;"></div>
+                        <div echarts [options]="chartOption4" style="height: 300px;width: 600px;"></div>
                     </div>
                     <div class="col-md-auto" style="min-width: 350px;">
                         <mat-ext-table [dataSource]="dataSource4" [scroll]="true" [scrollHeight]="300">
@@ -113,7 +113,7 @@
                                 <cdk-cell *matCellDef="let element">第{{element.term}}期</cdk-cell>
                             </ng-container>
                             <ng-container cdkColumnDef="rate">
-                                <cdk-header-cell *cdkHeaderCellDef>加权累计违约率</cdk-header-cell>
+                                <cdk-header-cell *cdkHeaderCellDef>违约时间分布</cdk-header-cell>
                                 <cdk-cell *matCellDef="let element">{{element.rate | percent:'0.2-2'}}</cdk-cell>
                             </ng-container>
                             <cdk-header-row *cdkHeaderRowDef="['term', 'rate']"></cdk-header-row>
