--- a/src/app/pages/pdcalc/components/pressuresce/main.html
+++ b/src/app/pages/pdcalc/components/pressuresce/main.html
@@ -1,4 +1,4 @@
-<bench-param [inputParams]="params"></bench-param>
+<bench-param [inputParams]="params" [proposalId]="proposalId" [initType]="initType" (paramsUpdate)="onParamsUpdate($event)"></bench-param>
 <scene-param [inputParams]="params"></scene-param>
 <div class="card card-region calc-result">
     <div class="card-header"  style="display: flex; align-items: center;background-color: #ffffff">
