--- a/src/app/pages/statassetpool/components/analyse/zc.html
+++ b/src/app/pages/statassetpool/components/analyse/zc.html
@@ -25,20 +25,14 @@
             <div class="container-fluid content-item-content" style="padding-left: 0px;">
                 <div class="row justify-content-md-left" style="flex-wrap: nowrap;">
                     <div class="col-md-auto" style="min-width: 630px;border: 1px solid #b9a7a7;margin-left: 9px;">
-                        <div echarts [options]="chartOption1" style="height: 400px;width: 600px;"></div>
+                        <div echarts [options]="chartOption1" style="height: 300px;width: 600px;"></div>
                     </div>
                     <div class="col-md-auto" style="display:flex;align-items:center;min-width:160px;">
                         <div style="display: flex;width: 150px;flex-direction: column">
-                            <span style="color: red;text-align: center;">{{staticPoolInfo.averageD | percent:'0.2-2'}}y</span>
+                            <span style="color: red;text-align: center;">{{staticPoolInfo.averageE | percent:'0.2-2'}}</span>
                             <span style="text-align: center;position: relative;">
                                 <i class="fa fa-bar-chart" style="font-size: 40px;font-weight: 200px;"></i>
-                                <label style="position:  absolute;bottom: -30px;left: 35px;font-size: 1rem;">违约率均值</label>
-                            </span>
-                            <div style="height: 80px;"></div>
-                            <span style="color: red;text-align: center">{{staticPoolInfo.varianceD | percent:'0.2-2'}}</span>
-                            <span style="text-align: center;position: relative;">
-                                <i class="fa fa-line-chart" style="font-size: 40px;font-weight: 200px;"></i>
-                                <label style="position:  absolute;bottom: -30px;left: 35px;font-size: 1rem;">违约率方差</label>
+                                <label style="position:  absolute;bottom: -30px;left: 35px;font-size: 1rem;">早偿率均值</label>
                             </span>
                         </div>
                     </div>
